# Discrete_Math

./: .gitignore  CMakeLists.txt  main.cpp
alg/: alg.cpp  alg.h
lab3.1/: Relation.cpp  Relation.h
lab3.2/: TransitivityClosureExperiment.cpp  TransitivityClosureExperiment.h
lab3.3/: SetFactor.cpp  SetFactor.h  Set_Factor.cpp  Set_Factor.h
lab3.4/: OrderedSet.cpp  OrderedSet.h
lab4.1/: Graph.cpp  Graph.h
lab4.2/: .txt  GraphCheck.cpp  GraphCheck.h
lab4.3/: Kruskal.cpp  Kruskal.h
lab4.4/: Dijkstra.cpp  Dijkstra.h
lab4.5/: Floyd.cpp  Floyd.h
test/: test.cpp  test.h  test.txt
